PLUGINWIZARD-51 : Refactoring to use MVC library - work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@51627 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xml_spring_context_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xml_spring_context_alternative.html
@@ -8,7 +8,7 @@
 </#list>
 <#list plugin.portlets as portlet>
 <#if portlet?? >
-<#assign nBeginIndex = portlet.pluginPortletTypeName?last_index_of("_")><#assign portletName = portlet.pluginPortletTypeName?substring(0, nBeginIndex)?lower_case>
+<#assign nBeginIndex = portlet.portletTypeName?last_index_of("_")><#assign portletName = portlet.portletTypeName?substring(0, nBeginIndex)?lower_case>
     <bean id="${plugin.pluginName}.${portletName?lower_case}PortletDAO"  class="fr.paris.lutece.plugins.${plugin.pluginName}.business.portlet.${portletName?cap_first}PortletDAO" />    
 </#if>    
 </#list>
