--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_portlet_html.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_portlet_html.html
@@ -1,4 +1,4 @@
-<#assign nBeginIndex = portlet.pluginPortletTypeName?last_index_of("_")><#assign portletName = portlet.pluginPortletTypeName?substring(0, nBeginIndex)?lower_case>
+<#assign nBeginIndex = portlet.portletTypeName?last_index_of("_")><#assign portletName = portlet.portletTypeName?substring(0, nBeginIndex)?lower_case>
   
 <#switch template_type>
  
