--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_portlet_jspbean.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_portlet_jspbean.html
@@ -1,5 +1,5 @@
-	<#assign nBeginIndex = portlet.pluginPortletTypeName?last_index_of("_")>
-	<#assign portletName = portlet.pluginPortletTypeName?substring(0, nBeginIndex)?lower_case>
+	<#assign nBeginIndex = portlet.portletTypeName?last_index_of("_")>
+	<#assign portletName = portlet.portletTypeName?substring(0, nBeginIndex)?lower_case>
 /*
  * Copyright (c) 2002-2013, Mairie de Paris
  * All rights reserved.
