--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
@@ -64,7 +64,7 @@
                 <div class="control-group">
                     <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPlugindbPoolRequired} :</label>            
                     <div class="controls">
-                        <select class="input-small" name="plugin_pool">    				
+                        <select class="input-small" name="plugin_db_pool_required">    				
                             <option value="1">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelTrue}
                             </option>    				
                             <option value="0">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelFalse}
