--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_portlet.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_portlet.html
@@ -23,34 +23,34 @@
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_portlet.labelPortletClass} :</label>
                     <div class="controls">   
-                        <input class="input-xlarge" type="text" name="portlet_class" size="30" value="${portlet.pluginPortletClass}"  />
+                        <input class="input-xlarge" type="text" name="portlet_class" size="30" value="${portlet.portletClass}"  />
                     </div>  
                 </div>
 
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_portlet.labelPortletTypeName} :</label>
                     <div class="controls">
-                        <input class="input-xlarge" type="text" name="portlet_type_name"  size="30"  value="${portlet.pluginPortletTypeName}"/>
+                        <input class="input-xlarge" type="text" name="portlet_type_name"  size="30"  value="${portlet.portletTypeName}"/>
                     </div>  
                 </div>
 
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_portlet.labelCreationUrl} :</label>
                     <div class="controls">
-                        <input class="input-xlarge" type="text" name="portlet_creation_url"  size="30" value="${portlet.pluginPortletCreationUrl}"  />
+                        <input class="input-xlarge" type="text" name="portlet_creation_url"  size="30" value="${portlet.portletCreationUrl}"  />
                     </div>  
                 </div>
 
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_portlet.labelUpdateUrl} :</label>
                     <div class="controls"> 
-                        <input class="input-xlarge" type="text" name="portlet_update_url"  size="30"  value="${portlet.pluginPortletUpdateUrl}" />
+                        <input class="input-xlarge" type="text" name="portlet_update_url"  size="30"  value="${portlet.portletUpdateUrl}" />
                     </div> 
                 </div>
 
                 <div class="form-actions">                                          
-                    <button type="submit" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_modify_portlet.buttonModifyPortlet} </button>                   
-                    <button type="submit" name="goToManagePortlets" class="btn">#i18n{pluginwizard.pluginwizard_modify_portlet.buttonBack} </button>                                                             
+                    <button type="submit" name="action_modifyPortlet" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_modify_portlet.buttonModifyPortlet} </button>                   
+                    <button type="submit" name="view_managePortlets" class="btn">#i18n{pluginwizard.pluginwizard_modify_portlet.buttonBack} </button>                                                             
                 </div> 
             </fieldset>
         </form>
