--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
@@ -31,7 +31,7 @@
                         </#if>
                         <ul>
                             <#list admin_features as feature>
-                            <li> <h6> ${feature.pluginFeatureTitle} </h6> </li>
+                            <li> <h6> ${feature.featureTitle} </h6> </li>
                             </#list>
                         </ul>
                     </h5>
