--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_xml_spring_context_classic.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_xml_spring_context_classic.html
@@ -8,7 +8,7 @@
 </#list>
 <#list plugin.portlets as portlet>
 <#if portlet?? >
-<#assign nBeginIndex = portlet.pluginPortletTypeName?last_index_of("_")><#assign portletName = portlet.pluginPortletTypeName?substring(0, nBeginIndex)?lower_case>
+<#assign nBeginIndex = portlet.portletTypeName?last_index_of("_")><#assign portletName = portlet.portletTypeName?substring(0, nBeginIndex)?lower_case>
     <bean id="${plugin.pluginName}.${portletName?lower_case}PortletDAO"  class="fr.paris.lutece.plugins.${plugin.pluginName}.business.portlet.${portletName?cap_first}PortletDAO" />    
 </#if>    
 </#list>
