--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_sql_db.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_sql_db.html
@@ -59,7 +59,7 @@ INSERT INTO core_user_right (id_right,id_user) VALUES ('${feature.pluginFeatureR
  
  <#case 4>
   <#list plugin.portlets as portlet> 
-  <#assign nBeginIndex = portlet.pluginPortletTypeName?last_index_of("_")><#assign portletName = portlet.pluginPortletTypeName?substring(0, nBeginIndex)?lower_case>
+  <#assign nBeginIndex = portlet.portletTypeName?last_index_of("_")><#assign portletName = portlet.portletTypeName?substring(0, nBeginIndex)?lower_case>
   
 --
 -- Structure for table ${portletName?lower_case}_portlet
