--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
@@ -29,33 +29,33 @@
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeType} * :</label>      
                     <div class="controls">       
-                        <@combo name="id_attribute_type" default_value="all" items=combo_attribute_type />      
+                        <@combo name="attribute_type_id" default_value="all" items=combo_attribute_type />      
                     </div> 
                 </div>
 
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelMandatory} * : </label>                            
                     <div class="controls">  
-                        <input class="checkbox" type="checkbox" name="mandatory" value="1" checked="checked"/>
+                        <input class="checkbox" type="checkbox" name="not_null" value="1" checked="checked"/>
                     </div>  
                 </div>
 
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeKey} * : </label>                            
                     <div class="controls">  
-                        <input class="checkbox" type="checkbox" name="primary_key" />
+                        <input class="checkbox" type="checkbox" name="is_primary" />
                     </div>  
                 </div>
 
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelClassDescription} * : </label>                            
                     <div class="controls">                                                                                                     
-                        <input class="checkbox" type="checkbox" name="class_description" />
+                        <input class="checkbox" type="checkbox" name="is_description" />
                     </div>                         
                 </div>
 
                 <div class="form-actions">                                          
-                    <button type="submit" name="action_createAttribue" class="btn btn-primary">
+                    <button type="submit" name="action_createAttribute" class="btn btn-primary">
                         #i18n{pluginwizard.pluginwizard_create_attribute.buttonCreateAttribute}
                     </button>                    
                     <button type="submit" name="view_modifyBusinessClass" class="btn">
