--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_business_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_business_class.html
@@ -50,13 +50,12 @@
             </fieldset>
         </form>
 
-        <form class="form pull-right" method="post"
-              action="jsp/site/Portal.jsp"><input
-                type="hidden" name="page" value="pluginwizard" />
-            <input type="hidden" name="plugin_id" value="${plugin_model.idPlugin}" /> 
+        <form class="form pull-right" method="post" action="jsp/site/Portal.jsp">
+            <input type="hidden" name="page" value="pluginwizard" />
+            <input type="hidden" name="view" value="createAttribute" />
             <input type="hidden" name="business_class_id" value="${business_class.id}"/>   
 
-            <button type="submit" name="goToCreateAttribute" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary">
                 <i class="icon-plus icon-white"></i>
                 #i18n{pluginwizard.pluginwizard_modify_business_class.labelCreateAttribute}
             </button> 
@@ -105,12 +104,12 @@
                     </td>
 
                     <td>
-                        <a href="jsp/site/Portal.jsp?page=pluginwizard&action=modify_attribute&plugin_id=${plugin_model.idPlugin}&attribute_id=${attribute.id}&business_class_id=${business_class.id}"   
+                        <a href="jsp/site/Portal.jsp?page=pluginwizard&view=modifyAttribute&attribute_id=${attribute.id}&business_class_id=${business_class.id}"
                            class="btn btn-primary btn-small"
                            title="#i18n{pluginwizard.pluginwizard_modify_business_class.buttonModifyAttribute}" >
                             <i class="icon-edit icon-white"></i>
                         </a>
-                        <a href="jsp/site/Portal.jsp?page=pluginwizard&action=remove_attribute&plugin_id=${plugin_model.idPlugin}&attribute_id=${attribute.id}&business_class_id=${business_class.id}"   
+                        <a href="jsp/site/Portal.jsp?page=pluginwizard&action=confirmRemoveAttribute&attribute_id=${attribute.id}&business_class_id=${business_class.id}"   
                            class="btn btn-danger btn-small"
                            title="#i18n{pluginwizard.pluginwizard_modify_business_class.buttonRemoveAttribute}" >
                             <i class="icon-trash icon-white"></i>
