PLUGINWIZARD-51 : Refactoring to use MVC library - work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@51628 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/errors_handler.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/errors_handler.html
@@ -2,9 +2,11 @@
 <#if errors??>
 <#if errors?size &gt; 0 >
 <div class="alert alert-danger">
-    <#list errors as error >
-    ${error.message}<br>
-    </#list>
+    <ul>
+        <#list errors as error >
+        <li>${error.message}</li>
+        </#list>
+    </ul>
 </div>
 </#if>
 </#if>
