PLUGINWIZARD-51 : Refactoring to use MVC library - info notifications and  i18n management
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@51633 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/errors_handler.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/errors_handler.html
@@ -2,11 +2,10 @@
 <#if errors??>
 <#if errors?size &gt; 0 >
 <div class="alert alert-danger">
-    <ul>
-        <#list errors as error >
-        <li>${error.message}</li>
-        </#list>
-    </ul>
+    <a class="close" data-dismiss="alert" href="#">×</a>
+    <#list errors as error >
+    <i class="icon-exclamation-sign"></i> ${error.message} <br>
+    </#list>
 </div>
 </#if>
 </#if>
