--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_applications.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_applications.html
@@ -10,6 +10,8 @@
     </div>
 
     <div class="span8">
+        <#include "infos_handler.html" />
+
         <h4>#i18n{pluginwizard.pluginwizard_manage_plugin_applications.pageTitle} </h4>                 
 
         <div class="pull-right"> 
@@ -22,7 +24,6 @@
                 </button>
             </form>
         </div>
-
 
         <table class="table table-condensed table-striped">
 
