--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_attribute.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_attribute.html
@@ -19,7 +19,9 @@
                 <input type="hidden" name="business_class_id" value="${business_class_id}" />
                 <input type="hidden" name="attribute_id" value="${attribute.id}" />   
 
-                <div class="control-group">
+                 <#include "errors_handler.html" />
+
+                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_attribute.labelAttributeName} * : </label>      
                     <div class="controls">     
                         <input type="text" name="attribute_name" value="${attribute.attributeName}" size="30" />      
