--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_business_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_business_class.html
@@ -12,6 +12,8 @@
 
     <div class="span8">
 
+        <#include "infos_handler.html" />
+
         <form class="form form-horizontal" method="post"  action="jsp/site/Portal.jsp">  
             <input type="hidden" name="page" value="pluginwizard" />        
             <input type="hidden" name="id" value="${business_class.id}"/>                                                              
