--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
@@ -10,6 +10,9 @@
     </div>
 
     <div class="span4">
+        <#include "infos_handler.html" />
+        <#include "errors_handler.html" />
+
         <h3>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.pageTitle} </h3> 
 
         <div class="well well-large">
