--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin.html
@@ -7,6 +7,7 @@
     </div>
 
     <div class="span8">
+        <#include "infos_handler.html" />
         <form action="jsp/site/Portal.jsp" class="form form-horizontal" method="post" >               
             <fieldset>  	 		
                 <legend>
@@ -16,7 +17,7 @@
                 <input type="hidden" name="page" value="pluginwizard" />			
                 <input type="hidden" name="action" value="createPlugin" />	
 
-<#include "errors_handler.html" />
+                 <#include "errors_handler.html" />
 
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_plugin.labelPluginName} :  </label>	
