--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
@@ -16,6 +16,9 @@
 
                 <input type="hidden" name="page" value="pluginwizard" />                
                 <input type="hidden" name="plugin_id" value="${plugin_model.idPlugin}" />                                                                                                   
+
+                 <#include "errors_handler.html" />
+
                 <div class="control-group">
                     <label class="control-label">                         	            	                        
                         #i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginName} :
