--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_business_classes.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_business_classes.html
@@ -13,6 +13,8 @@
 
     <div class="span8">        
 
+        <#include "infos_handler.html" />
+
         <h4>#i18n{pluginwizard.pluginwizard_manage_business_classes.pageTitle} </h4>                 
 
         <div class="pull-right"> 
