--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_portlets.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_portlets.html
@@ -10,6 +10,9 @@
     </div>
 
     <div class="span8">
+
+        <#include "infos_handler.html" />
+
         <h4>#i18n{pluginwizard.pluginwizard_manage_portlets.pageTitle}</h4>
 
         <div class="pull-right"> 
@@ -23,7 +26,7 @@
             </form>
         </div>
 
-        <table class="table table-condensed table-striped">
+       <table class="table table-condensed table-striped">
             <thead>
                 <tr>
                     <th>#i18n{pluginwizard.pluginwizard_manage_portlets.labelPortletClass}</th>
