--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/errors_handler.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/errors_handler.html
@@ -2,7 +2,7 @@
 <#if errors??>
 <#if errors?size &gt; 0 >
 <div class="alert alert-danger">
-    <a class="close" data-dismiss="alert" href="#">×</a>
+    <a class="close" data-dismiss="alert" href="#">x</a>
     <#list errors as error >
     <i class="icon-exclamation-sign"></i> ${error.message} <br>
     </#list>
