--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/infos_handler.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/infos_handler.html
@@ -2,7 +2,7 @@
 <#if infos??>
 <#if infos?size &gt; 0 >
 <div class="alert alert-info">
-    <a class="close" data-dismiss="alert" href="#">×</a>
+    <a class="close" data-dismiss="alert" href="#">x</a>
     <#list infos as info >
     <i class="icon-info-sign"></i> ${info.message} <br>
     </#list>
